# gucx-trunk

./: .gitignore  Makefile.am  README.md  clean-autogen.sh  configure.ac  gcuxt.spec.in
config/: Makefile.am  module-pkg-config.am
config/m4/: cncl.m4  compiler.m4
src/gmem/: Makefile.am  configure.m4  gucxt-gmem.pc.in
src/gmem/api/: gmem.h  log.h  type.h
src/gmem/base/: gmem_iface.c  gmem_iface.h
src/gmem/cncl/: Makefile.am  configure.m4  gucxt-cncl.pc.in
src/gmem/cuda/: Makefile.am  configure.m4  cuda_mem.c  cuda_mem.h  gucxt-cuda.pc.in
src/gmem/rocm/: Makefile.am  configure.m4  gucxt-rocm.pc.in  rocm_mem.c  rocm_mem.h
src/tools/info/: Makefile.am  gucxt_info.c  gucxt_info.h
