#
# Copyright (c) NVIDIA CORPORATION & AFFILIATES, 2001-2016. ALL RIGHTS RESERVED.
#
# See file LICENSE for terms.
#

bin_PROGRAMS              = gucxt_info
gucxt_info_CPPFLAGS = $(BASE_CPPFLAGS)
gucxt_info_CFLAGS   = $(BASE_CFLAGS)
gucxt_info_SOURCES  = gucxt_info.c
noinst_HEADERS = gucxt_info.h
gucxt_info_LDADD    = \
    $(abs_top_builddir)/src/gmem/libgmem.la